# raytracer-optimisation

./: AVANT_APRES.md  CHECKLIST.md  CMakeLists.txt  COMMANDES_ESSENTIELLES.md  DEMO.md  EXECUTIVE_SUMMARY.txt  EXPLICATION_SIMPLE.md  FICHIERS_AJOUTES.md  GUIDE_TESTS.md  INDEX.md  INDEX_DOCUMENTATION.md  OPTIMIZATION_REPORT.md  PRESENTATION_EVALUATION.md  README.md  README_OPTIMISATION.md  README_TESTS.md  RESULTATS_OPTIMISATION.md  SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY.md  main.cpp  run_tests.sh
scenes/tests/: basic.json  empty.json
src/raymath/: Ray.cpp  Ray.hpp  Vector3.cpp  Vector3.hpp
src/rayscene/: RenderStats.hpp  Scene.cpp  Sphere.cpp
tests/: CMakeLists.txt  README.md  generate_references.cmake  image_compare.cpp  run_performance_test.cmake  run_test.cmake  test_render.cpp
tests/e2e/: run_raytrace_and_compare.py
tests/scenes/: complex-test.json  edge-case-empty.json  edge-case-single-sphere.json  empty-scene.json  invalid-scene.json  simple-test.json  single-sphere.json
